# Cimmeria

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Cargo.toml  Makefile  README.md  W-NG.sln  build-boost.bat  build.sh  db.bat  docker-compose.yml  init-boost.bat  patch-client.ps1  setup-dependencies.ps1  setup.ps1
.cargo/: config.toml
.claude/: settings.local.json
bootstrap/: README.md  build-boost.bat  (+3 more)
crates/admin-api/: Cargo.toml
crates/admin-api/src/: lib.rs  middleware.rs
crates/admin-api/src/routes/: audit.rs  auth.rs  config.rs  content.rs  editor.rs  entities.rs  mod.rs  players.rs  spaces.rs
crates/admin-api/src/ws/: broadcast_layer.rs  entity_stream.rs  event_stream.rs  log_stream.rs  mod.rs
crates/commands/: Cargo.toml
crates/commands/src/: lib.rs  parser.rs  permissions.rs  registry.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  error.rs  lib.rs  math.rs  types.rs
crates/content-engine/: Cargo.toml
crates/content-engine/src/: actions.rs  chain.rs  conditions.rs  context.rs  lib.rs  loader.rs  triggers.rs
crates/defs/: Cargo.toml  build.rs
crates/defs/generator/: emitter.rs  mod.rs  parser.rs
crates/defs/src/: lib.rs  registry.rs
crates/entity/: Cargo.toml
crates/entity/src/: abilities.rs  base_entity.rs  cell_entity.rs  inventory.rs  lib.rs  mailbox.rs  manager.rs  missions.rs  movement.rs  navigation.rs  properties.rs  space.rs  stats.rs  world_grid.rs
crates/game/: Cargo.toml
crates/game/src/: being.rs  lib.rs  mob.rs  npc.rs  player.rs
crates/game/src/combat/: abilities.rs  damage.rs  effects.rs  mod.rs  stats.rs
crates/game/src/commands/: gm_cmds.rs  mod.rs  player_cmds.rs
crates/game/src/interactions/: lootable.rs  mod.rs  stargate.rs  trainer.rs  vendor.rs
crates/game/src/inventory/: containers.rs  items.rs  loot.rs  mod.rs
crates/game/src/missions/: manager.rs  mod.rs  objectives.rs  rewards.rs
crates/game/src/social/: chat.rs  groups.rs  guilds.rs  mail.rs  mod.rs
crates/game/src/world/: mod.rs  regions.rs  spawning.rs
crates/launcher/: Cargo.toml  tauri.conf.json
crates/launcher/binaries/: README.md
crates/launcher/capabilities/: default.json
crates/launcher/src/: config.rs  download.rs  launch.rs  patch.rs
crates/launcher/ui/: index.html  main.js
crates/mercury/: Cargo.toml
crates/mercury/src/: bundle.rs  channel.rs  codec.rs  encryption.rs  lib.rs  messages.rs  nub.rs  packet.rs  unified.rs  unpacker.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/services/: Cargo.toml
crates/services/src/: audit.rs  auth.rs  base.rs  cell.rs  database.rs  lib.rs  mercury_ext.rs  orchestrator.rs
crates/services/src/base/: character.rs  chardef.rs  connect_loop.rs  cooked_data.rs  dispatch.rs  helpers.rs  login.rs  mod.rs  resources.rs  tick_sync.rs  world_entry.rs
crates/services/src/cell/: abilities.rs  chat.rs  combat.rs  content.rs  dispatch.rs  gate_travel.rs  interactions.rs  mail.rs  messages.rs  missions.rs  mod.rs  space_manager.rs  spawner.rs
crates/services/src/mercury/: aoi.rs  mod.rs  protocol.rs  types.rs  world_data.rs
crates/supervisor/: Cargo.toml
crates/supervisor/src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: content.rs  drafts.rs  ipc.rs  main.rs  state.rs
src/lib/: CMakeLists.txt
src/server/AuthenticationServer/: CMakeLists.txt
src/server/BaseApp/: CMakeLists.txt
src/server/CellApp/: CMakeLists.txt
src/server/NavBuilder/: CMakeLists.txt
tools/ContentEditor/: Cargo.toml  tauri.conf.json
tools/ContentEditor/capabilities/: default.json
tools/ContentEditor/src/: main.rs  state.rs
tools/ContentEditor/src/commands/: chains.rs  convert.rs  data.rs  hot_reload.rs  mod.rs  scripts.rs  seed_export.rs
tools/ContentEditor/src/script/: compiler.rs  definitions.rs  mod.rs  xml_format.rs
tools/ContentEditor/ui/: index.html  package-lock.json  package.json  vite.config.ts
tools/ContentEditor/ui/src/: App.tsx  index.css
tools/ContentEditor/ui/src/components/: AbilityForm.tsx  AppLayout.tsx  ConnectDialog.tsx  DataGrid.tsx  EntityTemplateForm.tsx  Inspector.tsx  ItemForm.tsx  LootTableForm.tsx  MissionCardLibrary.tsx  MissionForm.tsx  ScriptBrowser.tsx  ScriptNodePalette.tsx  ScriptPropertyPanel.tsx  Toolbar.tsx  TreeNav.tsx  ValidationPanel.tsx
tools/ContentEditor/ui/src/editors/: ChainEditor.tsx  ChainFrame.tsx  ChainNode.tsx  DataEditor.tsx  MissionNode.tsx  ScriptCommentNode.tsx  ScriptEdge.tsx  ScriptEditor.tsx  ScriptNode.tsx  SequenceEdge.tsx  chainConvert.ts  constants.ts  dataTypes.ts  scriptTypes.ts  types.ts
tools/ContentEditor/ui/src/lib/: chainConnections.ts  chainLayout.ts  chainNodeSchemas.ts  tauri.ts
tools/SGWLauncher/src-tauri/: Cargo.toml  tauri.conf.json
tools/SGWLauncher/src-tauri/binaries/: README.md
tools/SGWLauncher/src-tauri/src/: commands.rs  extract.rs  main.rs  updater.rs
tools/ServerEd/: CMakeLists.txt  ChainEditorWidget.cpp  ChainEditorWidget.h  ChainItemDialogs.cpp  ChainItemDialogs.h  ChainModel.h  ServerEd.pro  configurationdialog.cpp  configurationdialog.h  configurationdialog.ui  databaseworker.cpp  databaseworker.h  editorconfiguration.cpp  editorconfiguration.h  filesystembrowserwidget.cpp  filesystembrowserwidget.h  filesystembrowserwidget.ui  icon.rc  images.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  objectdatabase.cpp  objectdatabase.h  qneblock.cpp  qneblock.h  qnecomment.cpp  qnecomment.h  qneconnection.cpp  qneconnection.h  qneitem.cpp  qneitem.h  qneport.cpp  qneport.h  qnodeseditor.cpp  qnodeseditor.h  scriptcompiler.cpp  scriptcompiler.h  scriptdatabaselookupwidget.cpp  (+13 more)
tools/ServerEd/propertybrowser/: qtbuttonpropertybrowser.cpp  qtbuttonpropertybrowser.h  qteditorfactory.cpp  qteditorfactory.h  qtgroupboxpropertybrowser.cpp  qtgroupboxpropertybrowser.h  qtpropertybrowser.cpp  qtpropertybrowser.h  qtpropertybrowserutils.cpp  qtpropertybrowserutils_p.h  qtpropertymanager.cpp  qtpropertymanager.h  qttreepropertybrowser.cpp  qttreepropertybrowser.h  qtvariantproperty.cpp  qtvariantproperty.h
(+1064 files in other folders)
