[package]
name = "cimmeria-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tauri = { workspace = true, features = ["devtools"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
cimmeria-common = { workspace = true }
cimmeria-services = { workspace = true }
cimmeria-admin-api = { workspace = true }

[build-dependencies]
tauri-build = { workspace = true }
