[package]
name = "cimmeria-admin-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "REST/WebSocket admin API for the Cimmeria server emulator"

[dependencies]
cimmeria-common = { workspace = true }
cimmeria-services = { workspace = true }
cimmeria-entity = { workspace = true }
cimmeria-content-engine = { workspace = true }
cimmeria-commands = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
jsonwebtoken = { workspace = true }
