[package]
name = "cimmeria-commands"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "GM/admin command registry and dispatch for the Cimmeria server emulator"

[dependencies]
cimmeria-common = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
