[package]
name = "cimmeria-content-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Data-driven content system: trigger/condition/action chains replacing hand-written scripts"

[dependencies]
cimmeria-common = { workspace = true }
cimmeria-entity = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
