[package]
name = "cimmeria-entity"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Entity system runtime for the Cimmeria server emulator"

[dependencies]
cimmeria-common = { workspace = true }
cimmeria-mercury = { workspace = true }
cimmeria-defs = { workspace = true }
cimmeria-commands = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
