[package]
name = "cimmeria-game"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Game logic replacing the Python scripting layer for the Cimmeria server emulator"

[dependencies]
cimmeria-common = { workspace = true }
cimmeria-entity = { workspace = true }
cimmeria-commands = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
