[package]
name = "sgw-launcher"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Stargate Worlds game launcher"

[dependencies]
tauri = { workspace = true, features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
reqwest = { workspace = true, features = ["json", "stream"] }
sha2 = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures-util = { workspace = true }
tokio-util = "0.7"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tauri-build = { workspace = true }
