[package]
name = "cimmeria-mercury"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Mercury network protocol — reliable UDP and TCP inter-service framing for Cimmeria"

[dependencies]
cimmeria-common = { workspace = true }

tokio = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }

# Cryptography (AES-256-CBC + HMAC-MD5 — must be byte-identical to C++ implementation)
aes = { workspace = true }
cbc = { workspace = true }
hmac = { workspace = true }
md-5 = { workspace = true }

# Codec / framing
tokio-util = { version = "0.7", features = ["codec"] }
cipher = "0.4"
digest = "0.10"
