[package]
name = "cimmeria-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cimmeria server binary — starts Auth, Base, and Cell services"

[[bin]]
name = "cimmeria-server"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
cimmeria-admin-api = { workspace = true }
cimmeria-common = { workspace = true }
cimmeria-services = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
