[package]
name = "sgw-launcher"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Stargate Worlds game launcher"

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
reqwest = { version = "0.12", features = ["json", "stream"] }
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
tokio-util = "0.7"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tauri-build = "2"
